force-app/main/default/objects/Avatar_Combination__c/Avatar_Combination__c.object-meta.xml
<CustomObject>
    <label>Avatar Combination</label>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Avatar Combination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avatar Combination</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>