force-app/main/default/objects/Avatar_Combination__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>