force-app/main/default/objects/Avatar_Combination__c/fields/Avatar_Master__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Avatar Master</label>
    <referenceTo>Avatar_Master__c</referenceTo>
    <relationshipLabel>Avatar Combination</relationshipLabel>
    <relationshipName>Avatar_Combination</relationshipName>
    <type>Lookup</type>
</CustomField>