force-app/main/default/objects/Avatar_Combination__c/fields/SequenceNo__c.field-meta.xml
<CustomField>
    <fullName>SequenceNo__c</fullName>
    <label>Sequence No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>